# Autonomous_Catamaran

./: package.xml  setup.py
fail_safe_return/: fail_safe_return.py  fail_safe_return_launch.py
launch_codes/: gnss_launch.py  imu_launch.py  launch.py  power_distribution_board_launch.py  rp_lidar_launch.py  ultrasonic_servo_launch.py  voltage_and_current_sensor_launch.py  waterproof_ultrasonic_launch.py
logger/: logger_launch.py  logger_node.py
navigation2/: nav2_launch.py  nav2_params.yaml
obstacle_avoidance/: obstacle_avoidance.py  obstacle_avoidance_launch.py
package/: package.xml
rvizz/: rvizz_launch.py
sensor_nodes/: gnss_node.py  imu_node.py  power_distribution_board_node.py  rplidar_launch.py  ultrasonic_servo_node.py  ultrasonic_waterproof_node.py  voltage_and_current_node.py
setup/: setup.py
slam/: slam_launch.py  slam_rplidar_launch.py
telemetry/: telemetry_bridge_launch.py  telemetry_bridge_node.py
thrusters/: pwm_output_node.py  thruster_combined_launch.py  thruster_control_node.py  thruster_teleop_node.py
